--- a/src/components/PageNotFound/index.scss
+++ b/src/components/PageNotFound/index.scss
@@ -6,7 +6,13 @@
   width: 100%;
   background-color: white;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   z-index: 20;
+  div{
+    font-size: 3rem;
+    margin-bottom: 1rem;
+  }
+
 }
